<?xml version="1.0"?>
<package format="2">
  <name>orb_slam3_ros_wrapper</name>
  <version>1.0.0</version>
  <description>The orb_slam3_ros_wrapper package for Stereo-Inertial mapping</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>

</package>
